# GTM-Wargame

./: .gitignore  ARTICLE_NUMBERS.md  LICENSE  README.md  benchmark_phase.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: audit_flags.py  eval_checker.py  run.py
benchmark/fixtures/: cases.json  pools.json
benchmark/results/: eval_checker_raw.csv  eval_checker_report.md  experiment_a_report.md  flag_audit_raw.csv  flag_audit_verdicts.json
benchmark/results/examples/: gemini_seed1003_strategist.md  gemini_seed1015_strategist.md  gemini_seed1019_strategist.md  gemini_seed1023_strategist.md  gemini_seed1024_strategist.md  gemini_seed1025_strategist.md  llamacpp_seed1015_strategist.md  llamacpp_seed1016_strategist.md  llamacpp_seed1017_strategist.md  llamacpp_seed1029_strategist.md
benchmark/results/runs/: gemini_seed1000_analyst.json  gemini_seed1000_manager.json  gemini_seed1000_strategist.json  gemini_seed1001_analyst.json  gemini_seed1001_manager.json  gemini_seed1001_strategist.json  gemini_seed1002_analyst.json  gemini_seed1002_strategist.json  gemini_seed1003_analyst.json  gemini_seed1003_strategist.json  gemini_seed1004_analyst.json  gemini_seed1004_strategist.json  gemini_seed1005_analyst.json  gemini_seed1005_strategist.json  gemini_seed1006_analyst.json  gemini_seed1006_strategist.json  (+106 more)
data/: simulated_sales_data_rank_3.csv
notebooks/: marketing_physics.ipynb
src/: boardroom_app.py  config.py  consistency_checker.py  data_generator.py  driver_engine.py  gtm_agents.py  schemas.py  simulation_config.yaml
tests/: conftest.py  test_consistency_checker.py  test_data_generator.py  test_data_source.py  test_driver_engine.py  test_eval_checker.py  test_experiment_a.py  test_providers.py
(+11 files in other folders)
