[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtm-wargame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-anthropic>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.0",
    "llama-cpp-python>=0.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "streamlit>=1.56.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbstripout>=0.7.1",
    "pytest>=8.3.0",
]

[project.scripts]
gtm-boardroom = "gtm_boardroom.app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gtm_boardroom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
